--- a/style.css
+++ b/style.css
@@ -6,16 +6,11 @@
 header {
   background-color: black;
   display: flex;
-  paddind: 15px;
-  
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  width: 100%;
 }
-
-header div {
-  background-color: black;
-  display: flex;
-   justify-content: space-between;
-    width: 80%;
-  margin: auto;
 
 .spotify-logo {
   width: 150px;
@@ -28,8 +23,38 @@ header div {
   list-style: none;
 }
 
-
-
 .menu li {
   margin-left: 20px;
 }
+
+.section-premium {
+  background-color: rgb(29, 177, 222);
+  color: white;
+  width: 100%;
+  padding: 40px 0;
+  text-align: center;
+}
+
+.section-premium div {
+  width: 80%;
+  margin: auto;
+}
+
+.section-premium h1 {
+  font-size: 40px;
+  padding: 20px 0;
+}
+
+.section-premium h2 {
+  font-size: 20px;
+  padding-bottom: 40px;
+}
+
+#btn-Comece-agora {
+  background-color: black;
+  color: white;
+  padding: 15px;
+  border-radius: 100px;
+}
+
+    
