--- a/style.css
+++ b/style.css
@@ -50,11 +50,26 @@ header {
   padding-bottom: 40px;
 }
 
+.section-premium p {
+ margin: top 30px; 
+ padding-bottom: 30px;
+  font-size: 10px;
+}
+
+.section-premium a {
+  color:white ;
+
+
+
 #btn-Comece-agora {
   background-color: black;
   color: white;
-  padding: 15px;
-  border-radius: 100px;
+  padding: 15px 35px ;
+  border: 1px solid black;
 }
 
-    
+    btn-ver-planos { 
+ background-color: rgb(29, 177, 222);
+ border: 1px solid white ;
+  padding: 15px 35px ;
+  border-radius: 100px;
