--- a/style.css
+++ b/style.css
@@ -51,25 +51,102 @@ header {
 }
 
 .section-premium p {
- margin: top 30px; 
- padding-bottom: 30px;
+  margin-top: 30px;
+  padding-bottom: 30px;
   font-size: 10px;
 }
 
 .section-premium a {
-  color:white ;
-
-
+  color: white;
+}
 
 #btn-Comece-agora {
   background-color: black;
   color: white;
-  padding: 15px 35px ;
+  padding: 15px 35px;
   border: 1px solid black;
+  cursor: pointer;
 }
 
-    btn-ver-planos { 
- background-color: rgb(29, 177, 222);
- border: 1px solid white ;
-  padding: 15px 35px ;
+#btn-ver-planos {
+  background-color: rgb(29, 177, 222);
+  border: 1px solid white;
+  padding: 15px 35px;
   border-radius: 100px;
+  cursor: pointer;
+}
+
+.section-why-premium h2 {
+  font-size: 30px;
+  padding: 70px 0;
+  text-align: center;
+}
+
+.premium-items {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap; 
+  padding: 0 20px;
+}
+
+.premium-items > div {
+  max-width: 200px;
+  text-align: center;
+  padding: 0 40px 70px 40px;
+}
+
+.premium-items img {
+  width: 120px;
+  padding-bottom: 20px;
+}
+
+.premium-items h4 {
+  padding-bottom: 10px;
+}
+
+.section-chose-plan{
+background-color: #efefef;
+}
+
+.section-chose-plan div {
+width: 80%;
+margin auto;
+text-align: center;
+}
+
+.section-chose-plan h2 {
+  font-size: 30px;
+  padding-top: 70px;
+}
+
+.section-chose-plan h3 {
+  font-size: 15px;
+  padding: 10px 0;
+}
+
+.credit-cards {
+display: flex;
+justify-content: center;
+  }
+
+  .credit-cards img{
+width: 25px;
+  }
+  
+  .section-plan {
+   display: flex;
+  }
+
+  .plan-style {
+    background-color: white;
+box-shadow: 1px 1px 5px rgb (141, 141, 141);
+border-radius: 7px;
+padding: 10px;
+display: flex;
+flex-direction: column;
+align-items: flex-start
+height: 500px;
+max-width: 180px;
+font-size: 14px;
+ }
+
