--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ header {
   list-style: none;
 }
 
+.menu li:hover {
+ color: seagreen;
+}
+
 .menu li {
   margin-left: 20px;
 }
@@ -66,6 +70,13 @@ header {
   padding: 15px 35px;
   border: 1px solid black;
   cursor: pointer;
+  border-radius: 999px;
+}
+
+#btn-Comece-agora:hover {
+  padding: 20px 40px;
+
+  
 }
 
 #btn-ver-planos {
@@ -133,9 +144,20 @@ justify-content: center;
 width: 25px;
   }
   
-  .section-plan {
-   display: flex;
-  }
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.section-plan {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+  padding: 40px 0;
+}
+
+
 
  .plan-style {
   background-color: white;
@@ -189,15 +211,52 @@ width: 25px;
   margin-right: 10px;
 }
 
- .btn-comece-agora{
- background-color: black;
-  color: white;
-  padding: 15px 35px;
+ .btn-comece-agora{ 
+  background-color: black; color: white;
+ padding: 15px 35px;
   border: 1px solid black;
   margin: auto;
-  }
+  border-radius: 999px;
+ }
 
   .conditions, .conditions a {
     color: grey;
     font-size: 10px;
     }
+
+footer {
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  padding: 70px 10%;
+   }
+
+   footer div ul {
+    color: whitesmoke;
+    list-style-type: none;
+   }
+
+   footer a {
+    color: whitesmoke;
+    text-decoration: none;
+   }
+
+   footer li:nth-child (1) {
+    padding-bottom: 20px;
+   }
+
+   footer li {
+    padding: 10px 20px;
+    fonnt-size: 10px;
+   }
+
+   footer img {
+   width: 150px;
+   padding-right:20px ;
+   }
+
+   footer i {
+  color: #efefef;
+  font-size: 20px;
+  padding: 0 10px;
+   }
